# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-02-03 15:29:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-68

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-68


    modified files:
     ChangeLog MissingPy.cabal MissingPy/AnyDBM.hs
     Python/Objects/Dict.hs


2005-02-03 15:00:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-67

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-67


    new files:
     MissingPy/AnyDBM.hs MissingPy/AnyDBM/.arch-ids/=id

    modified files:
     ChangeLog

    new directories:
     MissingPy/AnyDBM MissingPy/AnyDBM/.arch-ids


2005-02-02 22:58:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-66

    Summary:
      Adjusted Dict to use keys() instead of items() due to compatibility with *dbm
    Revision:
      missingexts--head--0.7--patch-66


    modified files:
     ChangeLog Python/ForeignImports.hsc Python/Objects/Dict.hs
     testsrc/Dicttest.hs


2005-02-02 22:05:17 GMT	John Goerzen <jgoerzen@complete.org>	patch-65

    Summary:
      Checkpointing (tests run)
    Revision:
      missingexts--head--0.7--patch-65


    modified files:
     ChangeLog testsrc/BZip2test.hs


2005-02-02 22:02:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-64

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-64


    modified files:
     ChangeLog testsrc/BZip2test.hs


2005-02-02 21:52:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-63

    Summary:
      Checkpointing. tests still run.
    Revision:
      missingexts--head--0.7--patch-63


    modified files:
     ChangeLog testsrc/BZip2test.hs


2005-02-02 21:49:51 GMT	John Goerzen <jgoerzen@complete.org>	patch-62

    Summary:
      Tests run fine
    Revision:
      missingexts--head--0.7--patch-62


    modified files: